2005-01-20  Greg Hudson <ghudson@mit.edu>

	* Updated priority help text (maximum priority is now 5, not 9)

2005-01-20  Christian Bayle <bayle@debian.org>
	
	* added 'Nice' Patch to add Detail view to Task Manager [#1025]
	proposed by  Steel City Phantom, Thanks
	* Revert TaskDetailView patch until I find a better solution
	* Finally found a better solution...

2005-01-16  Tim Perdue <tim@gforge.org>

	* added BBC-all address to all email can be copied to a 
	certain address for archiving
	* added ability to release files in FRS system that were 
	uploaded via FTP instead of the HTTP upload. Requires several new 
	vars and a FTP upload directory that is readable and owned by the 
	same user as apache.

2005-01-16  Christian Bayle <bayle@debian.org>

	* Added a Makefile, that make easy to build debian package and phpdoc
	* Just give a try to make phpdoc
	* Fixed many lintian error in debian packages, tried also to improve upgrade

2005-01-15  Tim Perdue <tim@gforge.org>

	* added link and page to allow a person to request membership in a project
	* added logic to project admin page to approve/reject requests

2004-12-12  Guillaume Smet <guillaume-gforge@smet.org>

	* improved french localization of scmcvs plugin
	* fixed two parse errors in SVNPlugin
	* translated SVN plugin in French
	* finalized Grand Unified Search work based on Dominik Haas' patch [#833]
	* applied [#1012] Updated Dutch.tab (based on Gforge 3.3)
	* fixed RPM packaging and released new test RPMs

2004-12-12  Christian Bayle <bayle@aist.enst.fr>

	* Made some cleanup in Group.class so everything concerning System is
	done in System.class
	* Applied  Mathieu Peltier patch [#993] that generate scm snapshot
	* Removal of sys_default_theme_id in setup and register.php where it
	was only used.
	* Reorganisation of file in etc/httpd.d to handle multiple scm (SVN and
	CVS tested) on the same box
	
2004-12-11  Guillaume Smet <guillaume-gforge@smet.org>

	* applied [#1017] Important fix for Bulgarian.tab